problema de firebase arreglado

--- a/src/app/protected/components/score-table/score-table.component.css
+++ b/src/app/protected/components/score-table/score-table.component.css
@@ -1,4 +1,13 @@
 .table-container {
   height: 300px;
   overflow: auto;
+  text-align: center;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.capitalize {
+  text-transform: capitalize;
 }
