--- a/src/app/protected/components/score-table/score-table.component.html
+++ b/src/app/protected/components/score-table/score-table.component.html
@@ -13,22 +13,26 @@
     class="mat-elevation-z8"
   >
     <ng-container matColumnDef="game">
-      <th mat-header-cell *matHeaderCellDef>Juego</th>
-      <td mat-cell *matCellDef="let element">{{ element.game }}</td>
+      <th class="text-center" mat-header-cell *matHeaderCellDef>Juego</th>
+      <td class="capitalize" mat-cell *matCellDef="let element">
+        {{ element.game }}
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="score">
-      <th mat-header-cell *matHeaderCellDef>Puntaje / Resultado</th>
+      <th class="text-center" mat-header-cell *matHeaderCellDef>
+        Puntaje / Resultado
+      </th>
       <td mat-cell *matCellDef="let element">{{ element.score }}</td>
     </ng-container>
 
     <ng-container matColumnDef="userName">
-      <th mat-header-cell *matHeaderCellDef>Usuario</th>
+      <th class="text-center" mat-header-cell *matHeaderCellDef>Usuario</th>
       <td mat-cell *matCellDef="let element">{{ element.user.displayName }}</td>
     </ng-container>
 
     <ng-container matColumnDef="savedAt">
-      <th mat-header-cell *matHeaderCellDef>Fecha</th>
+      <th class="text-center" mat-header-cell *matHeaderCellDef>Fecha</th>
       <td mat-cell *matCellDef="let element">
         {{ this.formatDate(element.savedAt) }}
       </td>
